🔧 Fix server crash and upgrade Open Facts API to v3
- Fix server crash caused by type errors in product data handling
- Change default port from 80 to 8080 in server.js
- Add String() conversion for all product fields before .trim()
- Upgrade Open Facts API from v0 to v3 with correct endpoints
- Add country code (cc) parameter support for localization
- Update API endpoints to use world.openfoodfacts.net
- Fix product data normalization for API v3 response structure
- Add comprehensive product data model with Open Facts fields
- Implement barcode scanning with automatic product data enrichment
- Add modular frontend architecture with components and pages
- Add HTTPS server for camera permissions and barcode scanning
- Add proxy API for frontend-backend communication

All server stability issues resolved and API v3 integration complete.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,7 @@
   },
   "editor.formatOnSave": true,
   "editor.codeActionsOnSave": {
-    "source.fixAll": true
+    "source.fixAll": "explicit"
   },
   "javascript.suggest.autoImports": true,
   "typescript.suggest.autoImports": true,
