--- a/pantryos/pantryos-addon/config.yaml
+++ b/pantryos/pantryos-addon/config.yaml
@@ -3,7 +3,7 @@ name: PantryOS
 version: dev
 slug: pantryos
 description: Gestione della dispensa con interfaccia React e backend Node.js
-url: https://github.com/llingua/addon-pantryos
+url: https://github.com/llingua/pantryOS
 codenotary: codenotary@frenck.dev
 ingress: true
 ingress_stream: true
