--- a/pantryos/pantryos/config.yaml
+++ b/pantryos/pantryos/config.yaml
@@ -1,6 +1,6 @@
 ---
 name: PantryOS
-version: dev
+version: dev-1
 slug: pantryos
 description: Gestione della dispensa con interfaccia React e backend Node.js
 url: https://github.com/llingua/pantryOS
