Update PantryOS configuration and enhance UI components
- Bump version to dev-7 for updates
- Change codenotary signer email to lorenzo.lingua@gmail.com
- Implement mobile menu toggle functionality in AppShell
- Add responsive design improvements for mobile navigation
- Enhance product form with collapsible sections for better organization
- Update sidebar icons to use Tabler Icons for a modern look
- Include new styles for barcode and number input fields
- Adjust Content Security Policy to allow styles from jsDelivr

--- a/pantryos/pantryos/build.yaml
+++ b/pantryos/pantryos/build.yaml
@@ -4,5 +4,4 @@ build_from:
   amd64: ghcr.io/hassio-addons/base-nodejs:0.2.5
   armv7: ghcr.io/hassio-addons/base-nodejs:0.2.5
 codenotary:
-  base_image: codenotary@frenck.dev
-  signer: codenotary@frenck.dev
+  signer: lorenzo.lingua@gmail.com
