--- a/pantryos/pantryos/config.yaml
+++ b/pantryos/pantryos/config.yaml
@@ -1,10 +1,10 @@
 ---
 name: PantryOS
-version: dev-6
+version: dev-7
 slug: pantryos
 description: Gestione della dispensa con interfaccia React e backend Node.js
 url: https://github.com/llingua/pantryOS
-codenotary: codenotary@frenck.dev
+stage: experimental
 arch:
   - aarch64
   - armv7
