Update PantryOS to version dev-9 and enhance initialization script
- Bump version to dev-9 for updates
- Set application data file path in Dockerfile
- Improve initialization script to create state file with correct permissions
- Add detailed logging for state file creation and seeding process
- Ensure proper handling of existing state files

--- a/pantryos/pantryos/Dockerfile
+++ b/pantryos/pantryos/Dockerfile
@@ -6,6 +6,9 @@ FROM ${BUILD_FROM}
 # (opzionale) più tempo allo shutdown dei servizi
 ENV S6_SERVICES_GRACETIME=30000
 
+# Imposta il percorso del file di stato per l'addon HA
+ENV APP_DATA_FILE=/data/pantryos/state.json
+
 # L'app vivrà qui
 WORKDIR /opt/pantryos
 
