Miglioramenti al sistema di build e documentazione

--- a/pantryos/repository.yaml
+++ b/pantryos/repository.yaml
@@ -1,3 +1,4 @@
-name: PantryOS Add-ons
-url: https://github.com/llingua/pantryOS
-maintainer: llingua <llingua@example.com>
+name: PantryOS
+url: https://github.com/llingua/pantryos
+maintainer: llingua <lorenzo.lingua@gmail.com>
+maintainer_url: https://github.com/llingua
