--- a/pantryos/pantryos/build.yaml
+++ b/pantryos/pantryos/build.yaml
@@ -2,6 +2,9 @@
 build_from:
   aarch64: ghcr.io/hassio-addons/base-nodejs:0.2.5
   amd64: ghcr.io/hassio-addons/base-nodejs:0.2.5
+  armhf: ghcr.io/hassio-addons/base-nodejs:0.2.5
   armv7: ghcr.io/hassio-addons/base-nodejs:0.2.5
+  i386: ghcr.io/hassio-addons/base-nodejs:0.2.5
 codenotary:
   signer: lorenzo.lingua@gmail.com
+  base_image: ghcr.io/hassio-addons/base-nodejs:0.2.5
