--- a/pantryos/pantryos/config.yaml
+++ b/pantryos/pantryos/config.yaml
@@ -1,9 +1,24 @@
 ---
 name: PantryOS
-version: dev-10
+version: "dev-10"
 slug: pantryos
-description: Gestione della dispensa con interfaccia React e backend Node.js
-url: https://github.com/llingua/pantryOS
+description: "Gestione della dispensa con interfaccia React"
+url: "https://github.com/llingua/pantryos"
+arch: ["aarch64", "amd64", "armhf", "armv7", "i386"]
+startup: application
+boot: auto
+hassio_api: true
+hassio_role: default
+homeassistant_api: true
+ingress: true
+ingress_port: 3000
+panel_icon: mdi:food
+panel_title: PantryOS
+panel_admin: true
+ports:
+  "3000/tcp": 3000
+ports_description:
+  "3000/tcp": "Web interface"
 stage: experimental
 arch:
   - aarch64
