--- a/pantryos/config.yaml
+++ b/pantryos/config.yaml
@@ -1,17 +1,23 @@
 ---
 name: PantryOS
 version: "dev-10"
-slug: pantryos
-description: "Gestione della dispensa con interfaccia React"
-url: "https://github.com/llingua/pantryos"
-arch: ["aarch64", "amd64", "armhf", "armv7", "i386"]
+description: Gestione della dispensa con interfaccia React
+url: https://github.com/llingua/pantryos
+arch:
+  - aarch64
+  - amd64
+  - armhf
+  - armv7
+  - i386
 startup: application
 boot: auto
+init: false
 hassio_api: true
-hassio_role: default
 homeassistant_api: true
+host_network: false
 ingress: true
-ingress_port: 3000
+ingress_port: 8099
+ingress_entry: /api/hassio_ingress
 panel_icon: mdi:food
 panel_title: PantryOS
 panel_admin: true
@@ -19,57 +25,37 @@ ports:
   "3000/tcp": 3000
 ports_description:
   "3000/tcp": "Web interface"
-stage: experimental
-arch:
-  - aarch64
-  - armv7
-  - amd64
-init: false
-startup: services
-ingress: true
-ingress_port: 8099
-panel_icon: mdi:food-apple
 map:
-  - data:rw
+  - config:rw
   - ssl:ro
   - share:rw
   - media:rw
+  - backup:rw
 
 # Configurazione predefinita
 options:
-  # Impostazioni di base
   log_level: info
   timezone: Europe/Rome
   culture: it
   currency: EUR
-
-  # Impostazioni di sicurezza
   auth_proxy: true
   auth_proxy_header: X-WebAuth-User
   trusted_proxies: []
-
-  # Impostazioni di rete
   host: 0.0.0.0
   port: 3000
   base_path: /
-
-  # Impostazioni database
   database_path: /data/pantryos
   backup_enabled: true
   backup_retention_days: 30
-
-  # Impostazioni notifiche
   notifications_enabled: true
   email_notifications: false
   push_notifications: true
 
 # Schema di validazione per le opzioni
 schema:
-  # Impostazioni di base
   log_level:
     name: Log Level
     description: Livello di log
-    required: true
     type: select
     options:
       - debug
@@ -78,36 +64,110 @@ schema:
       - error
       - critical
     default: info
+    required: true
     advanced: true
 
   timezone:
     name: Timezone
     description: Fuso orario del sistema
-    required: true
     type: string
     default: Europe/Rome
+    required: true
 
   culture:
     name: Lingua
     description: Lingua dell'interfaccia
-    required: true
-    type: select
-    options:
-      - it
-      - en
-      - es
-      - fr
-      - de
+    type: string
     default: it
+    required: true
 
   currency:
     name: Valuta
     description: Valuta predefinita
-    required: true
     type: string
     default: EUR
+    required: true
 
-  # Impostazioni di sicurezza
+  auth_proxy:
+    name: Abilita Auth Proxy
+    description: Abilita l'autenticazione tramite proxy inverso
+    type: boolean
+    default: true
+    required: true
+
+  auth_proxy_header:
+    name: Header Auth Proxy
+    description: Header HTTP per l'autenticazione tramite proxy
+    type: string
+    default: X-WebAuth-User
+    required: true
+
+  host:
+    name: Host
+    description: Indirizzo di ascolto
+    type: string
+    default: 0.0.0.0
+    required: true
+
+  port:
+    name: Porta
+    description: Porta di ascolto
+    type: integer
+    default: 3000
+    required: true
+    min: 1
+    max: 65535
+
+  base_path:
+    name: Percorso base
+    description: Percorso base dell'applicazione
+    type: string
+    default: /
+    required: true
+
+  database_path:
+    name: Percorso database
+    description: Directory di salvataggio del database
+    type: string
+    default: /data/pantryos
+    required: true
+
+  backup_enabled:
+    name: Backup automatici
+    description: Abilita i backup automatici
+    type: boolean
+    default: true
+    required: true
+
+  backup_retention_days:
+    name: Conservazione backup (giorni)
+    description: Numero di giorni di conservazione dei backup
+    type: integer
+    default: 30
+    required: true
+    min: 1
+    max: 365
+
+  notifications_enabled:
+    name: Abilita notifiche
+    description: Abilita le notifiche dell'applicazione
+    type: boolean
+    default: true
+    required: true
+
+  email_notifications:
+    name: Notifiche email
+    description: Abilita le notifiche via email
+    type: boolean
+    default: false
+    required: true
+
+  push_notifications:
+    name: Notifiche push
+    description: Abilita le notifiche push
+    type: boolean
+    default: true
+    required: true
   auth_proxy:
     name: Abilita Auth Proxy
     description: Abilita l'autenticazione tramite proxy inverso
