Fix Home Assistant schema validation

--- a/pantryos/config.yaml
+++ b/pantryos/config.yaml
@@ -52,203 +52,21 @@ options:
   push_notifications: true
 
 # Schema di validazione per le opzioni
-schema:
-  log_level:
-    name: Log Level
-    description: Livello di log
-    type: string
-    default: info
-    required: true
-    advanced: true
-
-  timezone:
-    name: Timezone
-    description: Fuso orario del sistema
-    type: string
-    default: Europe/Rome
-    required: true
-
-  culture:
-    name: Lingua
-    description: Lingua dell'interfaccia (it, en, es, fr, de)
-    type: string
-    default: it
-    required: true
-
-  currency:
-    name: Valuta
-    description: Valuta predefinita
-    type: string
-    default: EUR
-    required: true
-
-  auth_proxy:
-    name: Abilita Auth Proxy
-    description: Abilita l'autenticazione tramite proxy inverso
-    type: boolean
-    default: true
-    required: true
-
-  auth_proxy_header:
-    name: Header Auth Proxy
-    description: Header HTTP per l'autenticazione tramite proxy
-    type: string
-    default: X-WebAuth-User
-    required: true
-
-  host:
-    name: Host
-    description: Indirizzo di ascolto
-    type: string
-    default: 0.0.0.0
-    required: true
-
-  port:
-    name: Porta
-    description: Porta di ascolto
-    type: integer
-    default: 3000
-    required: true
-    min: 1
-    max: 65535
-
-  base_path:
-    name: Percorso base
-    description: Percorso base dell'applicazione
-    type: string
-    default: /
-    required: true
-
-  database_path:
-    name: Percorso database
-    description: Directory di salvataggio del database
-    type: string
-    default: /data/pantryos
-    required: true
-
-  backup_enabled:
-    name: Backup automatici
-    description: Abilita i backup automatici
-    type: boolean
-    default: true
-    required: true
-
-  backup_retention_days:
-    name: Conservazione backup (giorni)
-    description: Numero di giorni di conservazione dei backup
-    type: integer
-    default: 30
-    required: true
-    min: 1
-    max: 365
-
-  notifications_enabled:
-    name: Abilita notifiche
-    description: Abilita le notifiche dell'applicazione
-    type: boolean
-    default: true
-    required: true
-
-  email_notifications:
-    name: Notifiche email
-    description: Abilita le notifiche via email
-    type: boolean
-    default: false
-    required: true
-
-  push_notifications:
-    name: Notifiche push
-    description: Abilita le notifiche push
-    type: boolean
-    default: true
-    required: true
-  auth_proxy:
-    name: Abilita Auth Proxy
-    description: Abilita l'autenticazione tramite proxy inverso
-    required: true
-    type: boolean
-    default: true
-
-  auth_proxy_header:
-    name: Header Auth Proxy
-    description: Header HTTP per l'autenticazione tramite proxy
-    required: true
-    type: string
-    default: X-WebAuth-User
-
-  trusted_proxies:
-    name: Proxy attendibili
-    description: Lista di indirizzi IP o reti attendibili per il proxy
-    required: false
-    type: [string]
-    default: []
-
-  # Impostazioni di rete
-  host:
-    name: Host
-    description: Indirizzo di ascolto
-    required: true
-    type: string
-    default: 0.0.0.0
-
-  port:
-    name: Porta
-    description: Porta di ascolto
-    required: true
-    type: integer
-    value_min: 1
-    value_max: 65535
-    default: 3000
-
-  base_path:
-    name: Percorso base
-    description: Percorso base dell'applicazione
-    required: true
-    type: string
-    default: /
-
-  # Impostazioni database
-  database_path:
-    name: Percorso database
-    description: Directory di salvataggio del database
-    required: true
-    type: string
-    default: /data/pantryos
-
-  backup_enabled:
-    name: Backup automatici
-    description: Abilita i backup automatici
-    required: true
-    type: boolean
-    default: true
-
-  backup_retention_days:
-    name: Conservazione backup (giorni)
-    description: Numero di giorni di conservazione dei backup
-    required: true
-    type: integer
-    value_min: 1
-    value_max: 365
-    default: 30
-
-  # Impostazioni notifiche
-  notifications_enabled:
-    name: Abilita notifiche
-    description: Abilita le notifiche dell'applicazione
-    required: true
-    type: boolean
-    default: true
-
-  email_notifications:
-    name: Notifiche email
-    description: Abilita le notifiche via email
-    required: true
-    type: boolean
-    default: false
-
-  push_notifications:
-    name: Notifiche push
-    description: Abilita le notifiche push
-    required: true
-    type: boolean
-    default: true
+schema: |
+  {
+    "log_level": "str",
+    "timezone": "str",
+    "culture": "str",
+    "currency": "str",
+    "auth_proxy": "bool",
+    "auth_proxy_header": "str",
+    "host": "str",
+    "port": "int",
+    "base_path": "str",
+    "database_path": "str",
+    "backup_enabled": "bool",
+    "backup_retention_days": "int",
+    "notifications_enabled": "bool",
+    "email_notifications": "bool",
+    "push_notifications": "bool"
+  }
