--- a/pantryos/config.yaml
+++ b/pantryos/config.yaml
@@ -1,8 +1,9 @@
 ---
 name: PantryOS
-version: "dev-10"
+version: "dev-11"
 description: Gestione della dispensa con interfaccia React
 url: https://github.com/llingua/pantryos
+slug: pantryos
 arch:
   - aarch64
   - amd64
@@ -16,15 +17,12 @@ hassio_api: true
 homeassistant_api: true
 host_network: false
 ingress: true
-ingress_port: 8099
-ingress_entry: /api/hassio_ingress
+ingress_port: 3000
+ingress_entry: /
 panel_icon: mdi:food
 panel_title: PantryOS
 panel_admin: true
-ports:
-  "3000/tcp": 3000
-ports_description:
-  "3000/tcp": "Web interface"
+ports: {}
 map:
   - config:rw
   - ssl:ro
@@ -52,21 +50,20 @@ options:
   push_notifications: true
 
 # Schema di validazione per le opzioni
-schema: |
-  {
-    "log_level": "str",
-    "timezone": "str",
-    "culture": "str",
-    "currency": "str",
-    "auth_proxy": "bool",
-    "auth_proxy_header": "str",
-    "host": "str",
-    "port": "int",
-    "base_path": "str",
-    "database_path": "str",
-    "backup_enabled": "bool",
-    "backup_retention_days": "int",
-    "notifications_enabled": "bool",
-    "email_notifications": "bool",
-    "push_notifications": "bool"
-  }
+schema:
+  log_level: str
+  timezone: str
+  culture: str
+  currency: str
+  auth_proxy: bool
+  auth_proxy_header: str
+  trusted_proxies: [str]
+  host: str
+  port: int(1,65535)
+  base_path: str
+  database_path: str
+  backup_enabled: bool
+  backup_retention_days: int(1,365)
+  notifications_enabled: bool
+  email_notifications: bool
+  push_notifications: bool
