--- a/pantryos/build.yaml
+++ b/pantryos/build.yaml
@@ -1,16 +1,18 @@
 ---
 build_from:
-  aarch64: ghcr.io/hassio-addons/base-nodejs:0.2.5
-  amd64: ghcr.io/hassio-addons/base-nodejs:0.2.5
-  armhf: ghcr.io/hassio-addons/base-nodejs:0.2.5
-  armv7: ghcr.io/hassio-addons/base-nodejs:0.2.5
-  i386: ghcr.io/hassio-addons/base-nodejs:0.2.5
+  aarch64: ghcr.io/hassio-addons/base-nodejs/aarch64:0.2.5
+  amd64: ghcr.io/hassio-addons/base-nodejs/amd64:0.2.5
+  armhf: ghcr.io/hassio-addons/base-nodejs/armhf:0.2.5
+  armv7: ghcr.io/hassio-addons/base-nodejs/armv7:0.2.5
+  i386: ghcr.io/hassio-addons/base-nodejs/i386:0.2.5
+
+# Signing configuration
 codenotary:
   signer: lorenzo.lingua@gmail.com
-  base_image: ghcr.io/hassio-addons/base-nodejs:0.2.5
+  base_image: ghcr.io/hassio-addons/base-nodejs/{arch}:0.2.5
 
 # Build arguments
 args:
-  BUILD_FROM: ghcr.io/hassio-addons/base-nodejs:0.2.5
-  BUILD_VERSION: "dev-10"
-  BUILD_ARCH: "{{ arch }}"
+  BUILD_FROM: ghcr.io/hassio-addons/base-nodejs/{arch}:0.2.5
+  BUILD_VERSION: "dev-13"
+  BUILD_ARCH: "{arch}"
